2й коммит. Изменены теги по итогам комментариев. Подключены стили. Добавлены контентные картинки.

--- a/hotels.html
+++ b/hotels.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -78,28 +79,28 @@
     </div>
     <div class="results-container">
         <div class="results-hotel">
-            <img src="http://placehold.it/150x100" alt="Amara Resort & Spa" width="150" height="100">
+            <img src="img/hotels-amara-135x90.jpg" alt="Amara Resort & Spa" width="135" height="90">
             <h3 class="hotel-name">Amara Resort & Spa</h3>
-            <p class="results-hotel-type">Гостиница</p>
-            <p class="results-price-range">от 3500 Р.</p>
+            <h4 class="results-hotel-type">Гостиница</h4>
+            <span class="results-price-range">от 3500 Р.</span>
             <a href="#">Подробнее</a>
             <a href="#">Забронировать</a>
             <div class="rating">Рейтинг: 8,5</div>
         </div>
         <div class="results-hotel">
-            <img src="http://placehold.it/150x100" alt="Desert Quail Inn" width="150" height="100">
+            <img src="img/hotels-desert-135x90.jpg" alt="Desert Quail Inn" width="135" height="90">
             <h3 class="hotel-name">Desert Quail Inn</h3>
-            <p class="results-hotel-type">Мотель</p>
-            <p class="results-price-range">от 2000 Р.</p>
+            <h4 class="results-hotel-type">Мотель</h4>
+            <span class="results-price-range">от 2000 Р.</span>
             <a href="#">Подробнее</a>
             <a href="#">Забронировать</a>
             <div class="rating">Рейтинг: 8,9</div>
         </div>
         <div class="results-hotel">
-            <img src="http://placehold.it/150x100" alt="Villas at Poco Diablo" width="150" height="100">
+            <img src="img/hotels-villas-135x90.jpg" alt="Villas at Poco Diablo" width="135" height="90">
             <h3 class="hotel-name">Villas at Poco Diablo</h3>
-            <p class="results-hotel-type">Апартаменты</p>
-            <p class="results-price-range">от 4000 Р.</p>
+            <h4 class="results-hotel-type">Апартаменты</h4>
+            <span class="results-price-range">от 4000 Р.</span>
             <a href="#">Подробнее</a>
             <a href="#">Забронировать</a>
             <div class="rating">Рейтинг: 9,2</div>
