--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link href="css/index.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,18 +16,18 @@
                 <img src="img/sedona-logo-138x70.png" alt="Логотип" width="138" height="70">
             </div>
             <nav class="main-navigation">
-                <ul>
-                    <li>
-                        <a href="#">Информация</a>
+                <ul class="clearfix">
+                    <li class="left">
+                        <a class="nav-link" href="#">Информация</a>
                     </li>
-                    <li>
-                        <a href="#">Фото и видео</a>
+                    <li class="left">
+                        <a class="nav-link" href="#">Фото и видео</a>
                     </li>
-                    <li>
-                        <a href="#">Карта штата</a>
+                    <li class="right">
+                        <a class="nav-link" href="#">Карта штата</a>
                     </li>
-                    <li>
-                        <a href="#">Гостиница</a>
+                    <li class="right">
+                        <a class="nav-link" href="#">Гостиницы</a>
                     </li>
                 </ul>
             </nav>
@@ -38,8 +40,8 @@
         <section class="reasons">
             <h1 class="reasons-header">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
             <p class="reasons-header text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-            <div class="reasons-container clearfix">
-                <div class="reasons-item">
+            <div class="reasons-container reason-1 clearfix">
+                <div class="reasons-item left">
                     <h2 class="reasons-title">Настоящий городок</h2>
                     <span>- №1 -</span>
                     <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
@@ -48,36 +50,36 @@
             <div class="features clearfix">
                 <div class="features-item">
                     <h2 class="features-title">Жилье</h2>
-                    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                    <p class="features-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </div>
                 <div class="features-item">
                     <h2 class="features-title">Еда</h2>
-                    <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                    <p class="features-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </div>
                 <div class="features-item">
                     <h2 class="features-title">Сувениры</h2>
-                    <p>Не только китайского, но и местного производства!</p>
+                    <p class="features-text">Не только китайского, но и местного производства!</p>
                 </div>
             </div>
-            <div class="reasons-container clearfix">
-                <div class="reasons-item">
+            <div class="reasons-container reason-2 clearfix">
+                <div class="reasons-item right">
                     <h2 class="reasons-title">Там есть мост дьявола</h2>
                     <span>- №2 -</span>
                     <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
                 </div>
             </div>
             <div class="reasons clearfix">
-                <div class="reasons-item">
+                <div class="reasons-item reason-grey">
                     <h2 class="reasons-title">Небольшая площадь</h2>
                     <span>- №3 -</span>
-                    <p>Все достопримечательности находятся очень близко</p>
+                    <p>Все достопримеча-тельности находятся очень близко</p>
                 </div>
-                <div class="reasons-item">
+                <div class="reasons-item reason-grey">
                     <h2 class="reasons-title">Красивая дорога</h2>
                     <span>- №4 -</span>
                     <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
                 </div>
-                <div class="reasons-item">
+                <div class="reasons-item reason-grey">
                     <h2 class="reasons-title">Мало туристов</h2>
                     <span>- №5 -</span>
                     <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -88,7 +90,7 @@
             <h3 class="search-title">Заинтересовались?</h3>
             <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <div class="hotel-search">Поиск гостиницы в Седоне</div>
-            <form action="#" method="get" class="clearfix">
+            <form class="hotel-form" action="#" method="get" class="clearfix">
                 <label for="date-in">Дата заезда</label>
                 <input type="date" name="date-in" id="date-in">
                 <label for="date-out">Дата выезда</label>
@@ -98,7 +100,7 @@
                 <label for="children">Дети</label>
                 <input type="number" min="0" step="1" name="children" id="children">
                 <div class="btn">
-                    <input type="submit" value="Найти">
+                    <input class="btn-find" type="submit" value="Найти">
                 </div>
             </form>
         </section>
